# edge

./: .gitignore  README.md  readme.md
.github/: FUNDING.yml
.github/workflows/: beta_compile.yaml
bricks/cloudflare_workers/: README.md  brick.yaml
bricks/cloudflare_workers/__brick__/: README.md  pubspec.yaml  wrangler.toml
bricks/supabase_functions/: brick.yaml
bricks/supabase_functions/__brick__/: .gitignore  README.md  (+1 more)
bricks/vercel_edge/: brick.yaml
edge_web/: README.md  pubspec.yaml
edge_web/lib/: edge_web.dart  main.dart  main_debug.dart
edge_web/linux/: CMakeLists.txt  my_application.cc
edge_web/release/: Dockerfile
edge_web/test/: widget_test.dart
edge_web/web/: index.html  manifest.json
edge_web/windows/: CMakeLists.txt
package/edge/: pubspec.yaml
package/edge_cli/: README.md  pubspec.yaml
package/edge_cloudflare/: analysis_options.yaml  dart_test.yaml  package-lock.json  package.json  pubspec.yaml  pubspec_overrides.yaml
package/edge_dart/: .gitignore  CHANGELOG.md  README.md  build.yaml  pubspec.yaml
package/edge_dart_http_client/: CHANGELOG.md  pubspec.yaml
package/edge_dart_runtime/: CHANGELOG.md  pubspec.yaml  test_server.dart
package/edge_deno_deploy/: CHANGELOG.md  pubspec.yaml  pubspec_overrides.yaml
package/edge_flutter/: README.md  ffigen.yaml  pubspec.yaml
package/edge_flutter/src/: CMakeLists.txt
package/edge_netlify/: pubspec.yaml  pubspec_overrides.yaml
package/edge_supabase/: CHANGELOG.md  pubspec.yaml  pubspec_overrides.yaml
package/edge_vercel/: LICENSE  analysis_options.yaml  pubspec.yaml
(+227 files in other folders)
